Fix Blog width overflow issue, Nav Alignment.

--- a/_sass/partials/_blog.scss
+++ b/_sass/partials/_blog.scss
@@ -327,6 +327,8 @@ span.p-author.h-card,
 }
 
 .blog-main-container {
+  margin: 0;
+
   .nav2 a {
     color: $black;
 
