--- a/_sass/partials/_structure.scss
+++ b/_sass/partials/_structure.scss
@@ -127,11 +127,9 @@
   border-top: 1px solid $grey-color-light;
   // padding: $spacing-unit 0;
   // padding: 20px 0 0;
+  overflow: hidden;
   padding: 20px 20px 0;
-  text-align: center;
-}
-
-.site-footer {
+  // text-align: center;
   text-align: left;
 }
 
